Route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: job-account-management
  labels:
    app: job-account-management
    app.kubernetes.io/component: job-account-management
    app.kubernetes.io/instance: job-account-management
    app.kubernetes.io/part-of: foundation-service
spec:
  host: job-account-management-my-bca-bisnis-uat.apps.ocpdev.dti.co.id
  to:
    kind: Service
    name: job-account-management
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIHVjCCBj6gAwIBAgITJQAABN3FNxRdPfsUUgACAAAE3TANBgkqhkiG9w0BAQsF
[...]
      EThfWwBAyrxoMQ==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKgIBAAKCAgEA68VLRY2bHAUvLv2/PeQdDSchpvQU6dIGN/JIj28F19p6eJ6t
[...]
      -----END RSA PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEBDCCAuygAwIBAgIQWRrc69n8yZJJJ9J7HwCfqDANBgkqhkiG9w0BAQsFADB0
[...]
      WGx+/rblnXfETbt80r1VZCvg4JKeHstY
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
